# strict-num

./: Cargo.toml
src/: lib.rs  num_traits.rs
