[package]
name = "strict-num"
version = "0.2.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
license = "MIT"
description = "A collection of bounded numeric types"
repository = "https://github.com/RazrFalcon/strict-num"
documentation = "https://docs.rs/strict-num/"
categories = ["mathematics", "no-std"]
readme = "README.md"
edition = "2021"
rust-version = "1.56"

[dependencies]
float-cmp = { version = "0.9", default-features = false, features = ["std"], optional = true }
derive_more = { version = "0.99", optional = true }
num-derive = { version = "0.3", optional = true }
num-traits = { version = "0.2", optional = true, default-features = false }
serde = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
serde_json = "1"

[features]
default = ["approx-eq"]

# Implements `ApproxEq` and `ApproxEqUlps` traits for floating point numbers
# via the `float-cmp` crate.
# Disables `no_std`.
approx-eq = ["float-cmp"]

num-traits = ["dep:derive_more", "dep:num-derive", "dep:num-traits"]
